
---

### **`pyproject.toml`**
```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whois-recurse"
version = "0.1.0"
description = "Pure Python recursive WHOIS client with referral following"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security",
]
keywords = ["whois", "domain", "dns", "lookup", "registrar"]

[project.urls]
Homepage = "https://github.com/ssecgroup/python-whois-recurse"
Repository = "https://github.com/ssecgroup/python-whois-recurse.git"
Documentation = "https://python-whois-recurse.readthedocs.io"
Issues = "https://github.com/ssecgroup/python-whois-recurse/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy", "ruff"]